deployment/k8s/zitadel/zitadel-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zitadel-service
spec:
  selector:
    app: zitadel
  type: ClusterIP
  ports:
    - name: zitadel-port
      protocol: "TCP"
      port: 80
      targetPort: 8080
