deployment/k8s/zitadel/zitadel-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zitadel-route-tls-redirect
spec:
  parentRefs:
    - name: main-gateway
      sectionName: http
  hostnames:
    - "ip.hchood.com"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            port: 443
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zitadel-route
spec:
  parentRefs:
    - name: main-gateway
      sectionName: https
  hostnames:
  - "ip.hchood.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: zitadel-service
          port: 80
